[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-library-python"
dynamic = ["version"]
description = "Python port of AtCoder Library (ACL)."
authors = [
    {name = "kairi003", email = "kairi.satellite@gmail.com"},
    {name = "not522", email = "gobou522@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]

[project.optional-dependencies]
lint = [
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]
test = [
    "pytest>=8.4.1",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
benchmark = [
    "asv>=0.6.4",
    "virtualenv>=20.32.0",
]

[tool.setuptools]
packages = ["atcoder"]

[tool.setuptools_scm]

[tool.ruff]
include = [
    "pyproject.toml",
    "{atcoder,docs,examples,tests}/**/*.py",
]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B023", # function-uses-loop-variable (B023)
    "E741", # ambiguous-variable-type (E741)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
